HelloUltraviolet/Fixtures/RejectedSource/Names/InternalAccess/Expected.uv
//! Expected diagnostic metadata for the InternalAccess rejected-source specimen.

expectedDiagnostic("E-MOD-1207", "Access-Internal-Err")
